--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -198,6 +198,8 @@ nav{
 }
 
 .section-testimonials{
-  background-image: url(resources/images/art-background-min.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(images/art-background-min.jpg);
   background-size: cover;
+  color: #fff;
+  background-attachment: fixed;
 }
