--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -167,6 +167,7 @@ nav{
   display: inline-block;
   margin-top: 10.2em;
   margin-left: 3em;
+  padding-right: 20px;
   position: absolute;
   /* border: 1px solid #000; */
 }
