--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -199,8 +199,132 @@ nav{
 }
 
 .section-testimonials{
-  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(images/art-background-min.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(images/lightbulb.jpg);
   background-size: cover;
   color: #fff;
   background-attachment: fixed;
+}
+
+blockquote {
+    padding: 2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top: 40px;
+    text-align: center;
+}
+
+cite {
+    font-size: 90%;
+    margin-top: 25px;
+    display: block;
+}
+
+blockquote:before {
+    content: "\201C";
+    font-size: 500%;
+    display: block;
+    position: absolute;
+    top: -5px;;
+    left: -5px;
+}
+
+footer {
+    background-color: #fff;
+    padding: 30px;
+    font-size: 80%;
+}
+
+.footer-nav {
+    list-style: none;
+    float: left;
+}
+
+.social-icons {
+    list-style: none;
+    float: right;
+}
+
+.footer-nav li,
+.social-icons li {
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-icons li:last-child {
+    margin-right: 0px;
+}
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-icons li a:link,
+.social-icons li a:visited{
+    text-decoration: none;
+    border: 0;
+    color: #888;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active {
+    color: #ff5b48;
+}
+
+.social-icons li a:link,
+.social-icons li a:visited {
+    font-size: 180%;
+    font-weight: 600;
+}
+
+.ion-social-facebook,
+.ion-social-linkedin-outline,
+.ion-social-github {
+    transition: color 0.4s;
+}
+
+.ion-social-facebook:hover {
+    color: #3b5998;
+}
+
+.ion-social-linkedin-outline:hover {
+    color: #1da1f2;
+}
+
+.ion-social-github:hover {
+    color: #6e5494;
+}
+
+footer p {
+    color: #ff5b48;
+    font-weight: 600;
+    text-align: center;
+    font-size: 90%;
+    margin-top: 10px;
+}
+/* ------------------------------------------*/
+/* Stories */
+/*-------------------------------------------*/
+
+.stories {
+  display: inline-block;
+  margin-top: 12em;
+  margin-left: 10em;
+  position: center;
+  padding-right: 20px;
+  width: 80%;
+  position: absolute;
+}
+
+.story{
+  text-align: center;
+}
+
+.story-arrow {
+  margin-left: 18.2em;
+  margin-top: 3em;
+  display: inline-block;
+  cursor: pointer;
+  font-size: 200%;
+  color: #ff5b48;
 }
